unpackaged/main/default/objects/Database__c/Database__c.object-meta.xml
<CustomObject>
    <label>Database</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Databases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>