unpackaged/main/default/objects/Database__c/fields/Active_Units__c.field-meta.xml
<CustomField>
    <fullName>Active_Units__c</fullName>
    <label>Active Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>