unpackaged/main/default/objects/Database__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <description>The product that the database should belong to.
property - AppFolio Property Manager</description>
    <inlineHelpText>The product that the database should belong to.
property - AppFolio Property Manager</inlineHelpText>
    <label>Application Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>property</fullName>
                <default>true</default>
                <label>property</label>
            </value>
            <value>
                <fullName>Investment Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>