unpackaged/main/default/objects/Database__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <description>Created for R1814517; Modified for R1915156; Modified for R1916668, R1922477</description>
    <label>Asset</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Asset.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Databases</relationshipLabel>
    <relationshipName>Databases</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>