unpackaged/main/default/objects/Database__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>R1922245, R2026949, This is used for PNM integration</description>
    <formula>IF(  RecordTypeId  = &#39;0122E000001A0uO&#39;,
            vhost__c + &quot;.&quot; + CASE(TEXT(Application_Name__c), &quot;property&quot;, &quot;appfolio.com&quot;, &quot;rentapp&quot;, &quot;rentapp.com&quot;, &quot;securedocs&quot;, &quot;securedocs.com&quot;, &quot;appfolio.com&quot;),
            &quot;app.appfolioim.com/&quot;  + MID(vhost__c, 4, LEN(vhost__c)))</formula>
    <label>URL</label>
    <type>Text</type>
</CustomField>