unpackaged/main/default/objects/Database__c/fields/vhost__c.field-meta.xml
<CustomField>
    <fullName>vhost__c</fullName>
    <description>The name of the database. 
Must start with a letter and can contain letters and numbers only. No special characters allowed. 
Max length: 48
Please do NOT enter the database name with .appfolio.com

Updated R1814492</description>
    <externalId>true</externalId>
    <inlineHelpText>The name of the database. 
Must start with a letter and can contain letters and numbers only. No special characters allowed. 
Max length: 48
Please do NOT enter the database name with .appfolio.com</inlineHelpText>
    <label>DB Name</label>
    <length>48</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>