unpackaged/main/default/objects/Database__c/recordTypes/Property_Management.recordType-meta.xml
<RecordType>
    <fullName>Property_Management</fullName>
    <active>true</active>
    <description>Property_Management</description>
    <label>Property Management</label>
</RecordType>